--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -39,6 +39,7 @@
     color: white;
     border:  rgb(133, 193, 250);
     border-radius: 7px;
+    cursor: pointer;
 }
 .todo-data{
     margin-top: 20px;
